--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/MLAG-OSPF-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/MLAG-OSPF-L3LEAF1A.cfg
@@ -56,7 +56,9 @@ interface Ethernet1
    no switchport
    ip address 10.10.101.7/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha512 7 y3T//O9Xw3pqF6bDtFr8EELtrNKEERsI
 !
 interface Ethernet5
    description MLAG_PEER_MLAG-OSPF-L3LEAF1B_Ethernet5
