--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-BL1B.cfg
@@ -52,7 +52,9 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.49/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 75lAW2BE3DkMFcGwW7pr40ZdyCbWfN0r
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-SPINE2_Ethernet7
@@ -61,7 +63,9 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.51/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE3_Ethernet7
@@ -70,7 +74,9 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.53/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SPINE4_Ethernet7
@@ -79,7 +85,9 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.55/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 !
 interface Ethernet5
    description MLAG_PEER_DC1-BL1A_Ethernet5
