--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-SPINE2.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-SPINE2.cfg
@@ -34,7 +34,9 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.2/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 75lAW2BE3DkMFcGwW7pr40ZdyCbWfN0r
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-LEAF2A_Ethernet2
@@ -43,7 +45,9 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.10/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet3
    description P2P_LINK_TO_DC1-LEAF2B_Ethernet2
@@ -52,7 +56,9 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.18/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SVC3A_Ethernet2
@@ -61,7 +67,9 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.26/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 !
 interface Ethernet5
    description P2P_LINK_TO_DC1-SVC3B_Ethernet2
@@ -70,7 +78,9 @@ interface Ethernet5
    no switchport
    ip address 172.31.255.34/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 !
 interface Ethernet6
    description P2P_LINK_TO_DC1-BL1A_Ethernet2
@@ -79,7 +89,9 @@ interface Ethernet6
    no switchport
    ip address 172.31.255.42/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oy9urmCL+KtM34nnbbZa+oZJZzImREaK
 !
 interface Ethernet7
    description P2P_LINK_TO_DC1-BL1B_Ethernet2
@@ -88,7 +100,9 @@ interface Ethernet7
    no switchport
    ip address 172.31.255.50/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oy9urmCL+KtM34nnbbZa+oZJZzImREaK
 !
 interface Loopback0
    description EVPN_Overlay_Peering
