--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/configs/DC1-SVC3A.cfg
@@ -65,7 +65,9 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.25/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 75lAW2BE3DkMFcGwW7pr40ZdyCbWfN0r
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-SPINE2_Ethernet4
@@ -74,7 +76,9 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.27/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE3_Ethernet4
@@ -83,7 +87,9 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.29/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SPINE4_Ethernet4
@@ -92,7 +98,9 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.31/31
    ip ospf network point-to-point
+   ip ospf authentication message-digest
    ip ospf area 0.0.0.0
+   ip ospf message-digest-key 1 sha256 7 oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 !
 interface Ethernet5
    description MLAG_PEER_DC1-SVC3B_Ethernet5
