--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-BL1A.yml
@@ -185,6 +185,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.41/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 75lAW2BE3DkMFcGwW7pr40ZdyCbWfN0r
 - name: Ethernet2
   peer: DC1-SPINE2
   peer_interface: Ethernet6
@@ -196,6 +201,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.43/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 - name: Ethernet3
   peer: DC1-SPINE3
   peer_interface: Ethernet6
@@ -207,6 +217,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.45/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 - name: Ethernet4
   peer: DC1-SPINE4
   peer_interface: Ethernet6
@@ -218,6 +233,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.47/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 mlag_configuration:
   domain_id: DC1_BL1
   local_interface: Vlan4094
