--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-SPINE3.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ospf_overlay_ebgp/intended/structured_configs/DC1-SPINE3.yml
@@ -139,6 +139,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.4/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: 75lAW2BE3DkMFcGwW7pr40ZdyCbWfN0r
 - name: Ethernet2
   peer: DC1-LEAF2A
   peer_interface: Ethernet3
@@ -150,6 +155,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.12/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 - name: Ethernet3
   peer: DC1-LEAF2B
   peer_interface: Ethernet3
@@ -161,6 +171,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.20/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: wE8M/xeN3Vll0FP1vIN5UovmD8wQD3U8
 - name: Ethernet4
   peer: DC1-SVC3A
   peer_interface: Ethernet3
@@ -172,6 +187,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.28/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 - name: Ethernet5
   peer: DC1-SVC3B
   peer_interface: Ethernet3
@@ -183,6 +203,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.36/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: oRDB0AnG4AqF/KCJ/yBn8MPwsN+9A3xC
 - name: Ethernet6
   peer: DC1-BL1A
   peer_interface: Ethernet3
@@ -194,6 +219,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.44/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: oy9urmCL+KtM34nnbbZa+oZJZzImREaK
 - name: Ethernet7
   peer: DC1-BL1B
   peer_interface: Ethernet3
@@ -205,6 +235,11 @@ ethernet_interfaces:
   ip_address: 172.31.255.52/31
   ospf_network_point_to_point: true
   ospf_area: 0.0.0.0
+  ospf_authentication: message-digest
+  ospf_message_digest_keys:
+  - id: 1
+    hash_algorithm: sha256
+    key: oy9urmCL+KtM34nnbbZa+oZJZzImREaK
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
