--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2B.cfg
@@ -171,6 +171,10 @@ interface Port-Channel11
    mtu 1600
    switchport
    switchport access vlan 110
+   evpn ethernet-segment
+      identifier 0000:0000:ca01:5ba3:6ffb
+      route-target import ca:01:5b:a3:6f:fb
+   lacp system-id ca01.5ba3.6ffb
    spanning-tree bpduguard enable
    spanning-tree bpdufilter enable
 !
