--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
@@ -491,6 +491,16 @@ ethernet_interfaces:
   channel_group:
     id: 9
     mode: active
+- name: Ethernet12
+  peer: server01_MTU_ADAPTOR_MLAG
+  peer_interface: Eth7
+  peer_type: server
+  description: server01_MTU_ADAPTOR_MLAG_Eth7
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 12
+    mode: active
 - name: Ethernet13
   peer: DC1-L2LEAF4A
   peer_interface: Ethernet2
@@ -631,16 +641,6 @@ ethernet_interfaces:
   channel_group:
     id: 11
     mode: active
-- name: Ethernet12
-  peer: server01_MTU_ADAPTOR_MLAG
-  peer_interface: Eth7
-  peer_type: server
-  description: server01_MTU_ADAPTOR_MLAG_Eth7
-  shutdown: false
-  type: port-channel-member
-  channel_group:
-    id: 12
-    mode: active
 - name: Ethernet20
   peer: FIREWALL01
   peer_interface: E1
@@ -694,6 +694,19 @@ port_channel_interfaces:
     identifier: 0000:0000:0606:0707:0808
     route_target: 06:06:07:07:08:08
   lacp_id: 0606.0707.0808
+- name: Port-Channel11
+  description: server01_MTU_PROFILE_MLAG_PortChanne1
+  type: switched
+  shutdown: false
+  mode: access
+  vlans: '110'
+  evpn_ethernet_segment:
+    identifier: 0000:0000:ca01:5ba3:6ffb
+    route_target: ca:01:5b:a3:6f:fb
+  lacp_id: ca01.5ba3.6ffb
+  mtu: 1600
+  spanning_tree_bpdufilter: enabled
+  spanning_tree_bpduguard: enabled
 - name: Port-Channel1013
   description: DC1-L2LEAF4A_Po1001
   type: switched
@@ -722,15 +735,6 @@ port_channel_interfaces:
   vlans: 210-211
   spanning_tree_bpdufilter: disabled
   spanning_tree_bpduguard: disabled
-- name: Port-Channel11
-  description: server01_MTU_PROFILE_MLAG_PortChanne1
-  type: switched
-  shutdown: false
-  mtu: 1600
-  mode: access
-  vlans: '110'
-  spanning_tree_bpdufilter: enabled
-  spanning_tree_bpduguard: enabled
 - name: Port-Channel12
   description: server01_MTU_ADAPTOR_MLAG_PortChanne1
   type: switched
