Feat(eos_validate_state): Add deprecation warning for ansible test mode

--- a/ansible_collections/arista/avd/roles/eos_validate_state/tasks/ansible_tests.yml
+++ b/ansible_collections/arista/avd/roles/eos_validate_state/tasks/ansible_tests.yml
@@ -5,6 +5,16 @@
 #####################################
 ##  Run ansible eos_validate_state  ##
 #####################################
+- name: Generate variables for testing
+  arista.avd.emit_warning:
+    message: |-
+      Starting AVD 5.0.0, the only behavior for `eos_validate_state` will be the current one when using `use_anta: true`.
+      Please review the changes described on the ANTA integration page on https://avd.arista.com.
+  delegate_to: localhost
+  check_mode: false
+  run_once: true
+  tags:
+    - always
 
 - name: Generate variables for testing
   ansible.builtin.template:
