--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_prefix_lists.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_prefix_lists.schema.yml
@@ -9,8 +9,7 @@ keys:
   ipv4_prefix_list_catalog:
     type: list
     primary_key: name
-    description: |-
-      IPv4 prefix-list catalog.
+    description: IPv4 prefix-list catalog.
     convert_types:
       - dict
     items:
@@ -37,6 +36,6 @@ keys:
               action:
                 type: str
                 required: true
-                description: |
+                description: |-
                   Action as string.
                   Example: "permit 10.255.0.0/27 eq 32"
