--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -113,6 +113,53 @@ port_channel_interfaces:
     logging:
       event:
         link_status: true
+    switchport:
+      tap:
+        allowed_vlan: 25
+        default:
+          groups:
+            - g2
+            - g1
+            - g3
+          nexthop_groups:
+            - nexthop_g1
+            - nexthop_g3
+            - nexthop_g2
+          interfaces:
+            - port-channel10
+            - ethernet4
+        identity:
+          port_id: 3
+        mpls_pop_all: true
+        native_vlan: 10
+        truncation:
+          enabled: true
+        mac_address:
+          dest: 01:00:00:00:00:00
+          src: 01:23:45:67:89:ab
+        encapsulation:
+          gre_strip: true
+          gre:
+            destination: 1.1.1.1
+            protocol: "0x0000"
+      tool:
+        mpls_pop_all: true
+        encapsulation:
+          dot1br_strip: true
+          vn_tag_strip: true
+        allowed_vlan: 23
+        identity:
+          tag: qinq
+          qinq_dzgre_source: port inner policy
+        truncation:
+          enabled: true
+          size: 160
+        groups:
+          - group1
+          - group2
+          - group3
+        dzgre_preserve: true
+
   - name: Port-Channel100.101
     type: l3dot1q
     logging:
@@ -122,6 +169,7 @@ port_channel_interfaces:
     mtu: 1500
     ip_address: 10.1.1.3/31
     encapsulation_dot1q_vlan: 101
+
   - name: Port-Channel100.102
     type: l3dot1q
     logging:
@@ -138,6 +186,7 @@ port_channel_interfaces:
   - name: Port-Channel8
     description: to Dev02 Port-channel 8
     type: routed
+
   - name: Port-Channel8.101
     description: to Dev02 Port-Channel8.101 - VRF-C1
     type: l3dot1q
