--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -38,7 +38,7 @@ ethernet_interfaces:
         enabled: true
       enabled: false
       trunk:
-        allowed_vlans: 10-11
+        allowed_vlan: 10-11
         native_vlan: 5
         native_vlan_tag: true
         groups:
