--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -117,7 +117,7 @@ port_channel_interfaces:
       port_security:
         enabled: true
       trunk:
-        allowed_vlans: 10-11
+        allowed_vlan: 10-11
         native_vlan: 5
         native_vlan_tag: true
         groups:
