Feat(eos_designs): Add support to enable BGP peering with wan provider (#4079)
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -505,6 +505,9 @@ ip routing vrf PROD
 !
 ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.1:511
 !
+ip prefix-list ALLOW-DEFAULT
+   seq 10 permit 0.0.0.0/0
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
@@ -520,6 +523,21 @@ ip route 10.50.9.1/32 172.20.20.21 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
+!
+route-map RM-BGP-172.16.5.4-IN permit 10
+   match ip address prefix-list ALLOW-DEFAULT
+   set community no-advertise additive
+!
+route-map RM-BGP-172.16.5.4-OUT permit 10
+   match ip address prefix-list ALLOW-DEFAULT
+!
+route-map RM-BGP-172.16.5.4-OUT deny 20
+!
+route-map RM-BGP-172.16.9.4-IN permit 10
+   match ip address prefix-list ALLOW-DEFAULT
+   set community no-advertise additive
+!
+route-map RM-BGP-172.16.9.4-OUT deny 10
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
@@ -566,6 +584,14 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 172.16.5.4 remote-as 64520
+   neighbor 172.16.5.4 description Colt_10555
+   neighbor 172.16.5.4 route-map RM-BGP-172.16.5.4-IN in
+   neighbor 172.16.5.4 route-map RM-BGP-172.16.5.4-OUT out
+   neighbor 172.16.9.4 remote-as 64520
+   neighbor 172.16.9.4 description ATT_666_peer3_Ethernet42
+   neighbor 172.16.9.4 route-map RM-BGP-172.16.9.4-IN in
+   neighbor 172.16.9.4 route-map RM-BGP-172.16.9.4-OUT out
    neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.0 remote-as 65199
    neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1
