--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -344,6 +344,18 @@ interface Ethernet3
    dhcp client accept default-route
    ip nat service-profile NAT-IE-DIRECT
 !
+interface Ethernet4
+   no shutdown
+   no switchport
+   ip address dhcp
+   dhcp client accept default-route
+!
+interface Ethernet5
+   no shutdown
+   no switchport
+   ip address dhcp
+   dhcp client accept default-route
+!
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2
    no shutdown
@@ -570,6 +582,13 @@ ip routing vrf PROD
 !
 ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 !
+ip prefix-list ALLOW-DEFAULT
+   seq 10 permit 0.0.0.0/0
+!
+ip prefix-list PL2
+   seq 10 permit 5.0.0.0/0
+   seq 20 deny 10.00.0.0/24
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
@@ -579,6 +598,19 @@ ip route 10.50.9.1/32 172.31.0.1 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
+!
+route-map RM-BGP-172.28.0.14-OUT permit 10
+   match ip address prefix-list PL2
+!
+route-map RM-BGP-172.28.0.14-OUT deny 20
+!
+route-map RM-BGP-172.29.0.13-IN permit 10
+   match ip address prefix-list PL2
+!
+route-map RM-BGP-172.29.0.13-OUT permit 10
+   match ip address prefix-list ALLOW-DEFAULT
+!
+route-map RM-BGP-172.29.0.13-OUT deny 20
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
@@ -623,6 +655,11 @@ router bgp 65000
    neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.2 remote-as 65199
    neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2
+   neighbor 172.28.0.14 remote-as 64520
+   neighbor 172.28.0.14 route-map RM-BGP-172.28.0.14-OUT out
+   neighbor 172.29.0.13 remote-as 64520
+   neighbor 172.29.0.13 route-map RM-BGP-172.29.0.13-IN in
+   neighbor 172.29.0.13 route-map RM-BGP-172.29.0.13-OUT out
    neighbor 192.168.144.2 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.2 description cv-pathfinder-pathfinder1
    neighbor 192.168.144.3 peer group WAN-OVERLAY-PEERS
