Removing new tests and adding ptp_settings key in old tests.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/ptp-tests-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/ptp-tests-leaf2.yml
@@ -3,3 +3,8 @@
 ptp_settings:
   enabled: true
   auto_clock_identity: false
+
+# Test `ptp_settings` setting overrides  `ptp` setting.
+ptp:
+  enabled: false
+  auto_clock_identity: true
