--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
@@ -5,6 +5,7 @@ vlan internal order ascending range 1006 1199
 ip igmp snooping vlan 1 querier
 ip igmp snooping vlan 1 querier address 1.1.1.1
 ip igmp snooping vlan 1 querier version 3
+ip igmp snooping vlan 1 fast-leave
 ip igmp snooping vlan 2 querier
 ip igmp snooping vlan 2 querier address 1.1.1.1
 ip igmp snooping vlan 2 querier version 3
@@ -19,14 +20,25 @@ ip igmp snooping vlan 9 querier address 2.2.2.2
 ip igmp snooping vlan 9 querier version 1
 ip igmp snooping vlan 110 querier
 ip igmp snooping vlan 110 querier address 192.168.255.3
+ip igmp snooping vlan 110 fast-leave
 ip igmp snooping vlan 111 querier
 ip igmp snooping vlan 111 querier address 192.168.255.3
+ip igmp snooping vlan 111 fast-leave
 ip igmp snooping vlan 210 querier
 ip igmp snooping vlan 210 querier address 192.168.255.3
+ip igmp snooping vlan 210 fast-leave
+ip igmp snooping vlan 230 querier
+ip igmp snooping vlan 230 querier address 192.168.255.3
+ip igmp snooping vlan 230 fast-leave
+ip igmp snooping vlan 256 querier
+ip igmp snooping vlan 256 querier address 192.168.255.3
+ip igmp snooping vlan 256 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.3
+ip igmp snooping vlan 257 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.3
+ip igmp snooping vlan 4092 fast-leave
 !
 transceiver qsfp default-mode 4x10G
 !
