--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
@@ -839,27 +839,38 @@ ip_igmp_snooping:
     querier:
       enabled: true
       address: 192.168.255.5
+    fast_leave: true
   - id: 111
     querier:
       enabled: true
       address: 192.168.255.5
+    fast_leave: true
   - id: 210
     querier:
       enabled: true
       address: 192.168.255.5
+    fast_leave: true
+  - id: 256
+    querier:
+      enabled: true
+      address: 192.168.255.5
+    fast_leave: true
   - id: 257
     querier:
       enabled: true
       address: 192.168.255.5
+    fast_leave: true
   - id: 4092
     querier:
       enabled: true
       address: 192.168.255.5
+    fast_leave: true
   - id: 1
     querier:
       enabled: true
       address: 1.1.1.1
       version: 3
+    fast_leave: true
   - id: 2
     querier:
       enabled: true
@@ -880,6 +891,11 @@ ip_igmp_snooping:
       enabled: true
       address: 2.2.2.2
       version: 1
+  - id: 230
+    querier:
+      enabled: true
+      address: 192.168.255.5
+    fast_leave: true
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
 vlan_interfaces:
 - name: Vlan310
