Fixing the schema and code.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
@@ -53,6 +53,8 @@ interface ethernet3
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode text
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface ethernet4
    description P2P_LINK_TO_peer4_ethernet4
@@ -66,6 +68,8 @@ interface ethernet4
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode text
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Loopback0
    description EVPN_Overlay_Peering
@@ -82,8 +86,6 @@ router isis EVPN_UNDERLAY
    is-type level-2
    router-id ipv4 1.2.3.1
    log-adjacency-changes
-   authentication mode md5
-   authentication key 0 password
    !
    address-family ipv4 unicast
       maximum-paths 4
