--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_isis.yml
@@ -32,12 +32,6 @@ router_isis:
   address_family_ipv4:
     enabled: true
     maximum_paths: 4
-  authentication:
-    both:
-      key_type: '0'
-      key: password
-      mode: md5
-      rx_disabled: true
 ethernet_interfaces:
 - name: ethernet1
   peer: peer1
@@ -86,6 +80,8 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
+  isis_authentication_mode: text
+  isis_authentication_key: $1c$sTNAlR6rKSw=
 - name: ethernet4
   peer: peer4
   peer_interface: ethernet4
@@ -101,3 +97,5 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
+  isis_authentication_mode: text
+  isis_authentication_key: $1c$sTNAlR6rKSw=
