Updating molecule tests

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
@@ -4,8 +4,6 @@ vlan internal order ascending range 1006 1199
 !
 ip igmp snooping vlan 230 querier
 ip igmp snooping vlan 230 querier address 192.168.255.8
-ip igmp snooping vlan 256 querier
-ip igmp snooping vlan 256 querier address 192.168.255.8
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -85,6 +83,12 @@ vlan 241
 vlan 250
    name L3_MULTICAST_ENABLED_250
 !
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
+!
 vlan 256
    name MULTICAST_DISABLED_256
 !
@@ -111,6 +115,9 @@ vlan 550
 !
 vlan 4092
    name MULTICAST_ENABLED_4092
+!
+vlan 4094
+   name MULTICAST_ENABLED_4094
 !
 vrf instance MGMT
 !
@@ -419,6 +426,8 @@ interface Vxlan1
    vxlan vlan 240 vni 10240
    vxlan vlan 241 vni 10241
    vxlan vlan 250 vni 10250
+   vxlan vlan 251 vni 10251
+   vxlan vlan 252 vni 10252
    vxlan vlan 256 vni 10256
    vxlan vlan 257 vni 10257
    vxlan vlan 260 vni 10260
@@ -428,6 +437,7 @@ interface Vxlan1
    vxlan vlan 331 vni 10331
    vxlan vlan 550 vni 10550
    vxlan vlan 4092 vni 14092
+   vxlan vlan 4094 vni 14094
    vxlan vrf MULTICAST_DISABLED_5_6 vni 23
    vxlan vrf MULTICAST_DISABLED_310_311 vni 13
    vxlan vrf MULTICAST_ENABLED_1_2 vni 21
@@ -596,6 +606,17 @@ router bgp 65106
       route-target both 10250:10250
       redistribute learned
    !
+   vlan 251
+      rd 192.168.255.8:10251
+      route-target both 10251:10251
+      redistribute learned
+   !
+   vlan 252
+      rd 192.168.255.8:10252
+      route-target both 10252:10252
+      redistribute igmp
+      redistribute learned
+   !
    vlan 256
       rd 192.168.255.8:10256
       route-target both 10256:10256
@@ -646,6 +667,12 @@ router bgp 65106
    vlan 4092
       rd 192.168.255.8:14092
       route-target both 14092:14092
+      redistribute igmp
+      redistribute learned
+   !
+   vlan 4094
+      rd 192.168.255.8:14094
+      route-target both 14094:14094
       redistribute igmp
       redistribute learned
    !
