--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
@@ -29,14 +29,18 @@ ip igmp snooping vlan 210 querier address 192.168.255.6
 ip igmp snooping vlan 210 fast-leave
 ip igmp snooping vlan 230 querier
 ip igmp snooping vlan 230 querier address 192.168.255.6
-ip igmp snooping vlan 256 querier
-ip igmp snooping vlan 256 querier address 192.168.255.6
+ip igmp snooping vlan 252 querier
+ip igmp snooping vlan 252 querier address 192.168.255.6
+ip igmp snooping vlan 252 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.6
 ip igmp snooping vlan 257 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.6
 ip igmp snooping vlan 4092 fast-leave
+ip igmp snooping vlan 4094 querier
+ip igmp snooping vlan 4094 querier address 192.168.255.6
+ip igmp snooping vlan 4094 fast-leave
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -116,6 +120,12 @@ vlan 241
 vlan 250
    name L3_MULTICAST_ENABLED_250
 !
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
+!
 vlan 256
    name MULTICAST_DISABLED_256
 !
@@ -142,6 +152,9 @@ vlan 550
 !
 vlan 4092
    name MULTICAST_ENABLED_4092
+!
+vlan 4094
+   name MULTICAST_ENABLED_4094
 !
 vrf instance MGMT
 !
@@ -491,6 +504,8 @@ interface Vxlan1
    vxlan vlan 240 vni 10240
    vxlan vlan 241 vni 10241
    vxlan vlan 250 vni 10250
+   vxlan vlan 251 vni 10251
+   vxlan vlan 252 vni 10252
    vxlan vlan 256 vni 10256
    vxlan vlan 257 vni 10257
    vxlan vlan 260 vni 10260
@@ -500,6 +515,7 @@ interface Vxlan1
    vxlan vlan 331 vni 10331
    vxlan vlan 550 vni 10550
    vxlan vlan 4092 vni 14092
+   vxlan vlan 4094 vni 14094
    vxlan vrf MULTICAST_DISABLED_5_6 vni 23
    vxlan vrf MULTICAST_DISABLED_310_311 vni 13
    vxlan vrf MULTICAST_ENABLED_1_2 vni 21
@@ -523,8 +539,10 @@ interface Vxlan1
    vxlan vlan 110 multicast group 232.0.0.109
    vxlan vlan 111 multicast group 232.0.0.110
    vxlan vlan 210 multicast group 232.0.0.209
+   vxlan vlan 252 multicast group 232.0.0.251
    vxlan vlan 257 multicast group 232.0.1.0
    vxlan vlan 4092 multicast group 232.0.15.251
+   vxlan vlan 4094 multicast group 232.0.15.253
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_130_131 multicast group 232.0.32.31
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231 multicast group 232.0.32.32
    vxlan vrf TEN_D_L3_MULTICAST_ENABLED_140_DISABLED_141 multicast group 232.0.64.40
@@ -685,6 +703,17 @@ router bgp 65104
       route-target both 10250:10250
       redistribute learned
    !
+   vlan 251
+      rd 192.168.255.6:10251
+      route-target both 10251:10251
+      redistribute learned
+   !
+   vlan 252
+      rd 192.168.255.6:10252
+      route-target both 10252:10252
+      redistribute igmp
+      redistribute learned
+   !
    vlan 256
       rd 192.168.255.6:10256
       route-target both 10256:10256
@@ -735,6 +764,12 @@ router bgp 65104
    vlan 4092
       rd 192.168.255.6:14092
       route-target both 14092:14092
+      redistribute igmp
+      redistribute learned
+   !
+   vlan 4094
+      rd 192.168.255.6:14094
+      route-target both 14094:14094
       redistribute igmp
       redistribute learned
    !
