--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
@@ -80,6 +80,12 @@ vlan 241
 vlan 250
    name L3_MULTICAST_ENABLED_250
 !
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
+!
 vlan 256
    name MULTICAST_DISABLED_256
 !
@@ -107,13 +113,16 @@ vlan 550
 vlan 4092
    name MULTICAST_ENABLED_4092
 !
+vlan 4094
+   name MULTICAST_ENABLED_4094
+!
 vrf instance MGMT
 !
 interface Port-Channel1
    description EVPN_MULTICAST_L3LEAF1_Po6
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250,256-257,260,310-311,330-331,550,4092
+   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092,4094
    switchport mode trunk
 !
 interface Ethernet1
