--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1B.cfg
@@ -29,14 +29,18 @@ ip igmp snooping vlan 210 querier address 192.168.255.4
 ip igmp snooping vlan 210 fast-leave
 ip igmp snooping vlan 230 querier
 ip igmp snooping vlan 230 querier address 192.168.255.4
-ip igmp snooping vlan 256 querier
-ip igmp snooping vlan 256 querier address 192.168.255.4
+ip igmp snooping vlan 252 querier
+ip igmp snooping vlan 252 querier address 192.168.255.4
+ip igmp snooping vlan 252 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.4
 ip igmp snooping vlan 257 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.4
 ip igmp snooping vlan 4092 fast-leave
+ip igmp snooping vlan 4094 querier
+ip igmp snooping vlan 4094 querier address 192.168.255.4
+ip igmp snooping vlan 4094 fast-leave
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -117,6 +121,12 @@ vlan 241
 !
 vlan 250
    name L3_MULTICAST_ENABLED_250
+!
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
 !
 vlan 256
    name MULTICAST_DISABLED_256
@@ -210,7 +220,7 @@ vlan 4093
    trunk group LEAF_PEER_L3
 !
 vlan 4094
-   name MLAG_PEER
+   name MULTICAST_ENABLED_4094
    trunk group MLAG
 !
 vrf instance MGMT
@@ -272,7 +282,7 @@ interface Port-Channel6
    description EVPN-MULTICAST-L2LEAF1A_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250,256-257,260,310-311,330-331,550,4092
+   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092,4094
    switchport mode trunk
    mlag 6
 !
@@ -716,6 +726,8 @@ interface Vxlan1
    vxlan vlan 240 vni 10240
    vxlan vlan 241 vni 10241
    vxlan vlan 250 vni 10250
+   vxlan vlan 251 vni 10251
+   vxlan vlan 252 vni 10252
    vxlan vlan 256 vni 10256
    vxlan vlan 257 vni 10257
    vxlan vlan 260 vni 10260
@@ -725,6 +737,7 @@ interface Vxlan1
    vxlan vlan 331 vni 10331
    vxlan vlan 550 vni 10550
    vxlan vlan 4092 vni 14092
+   vxlan vlan 4094 vni 14094
    vxlan vrf MULTICAST_DISABLED_5_6 vni 23
    vxlan vrf MULTICAST_DISABLED_310_311 vni 13
    vxlan vrf MULTICAST_ENABLED_1_2 vni 21
@@ -749,8 +762,10 @@ interface Vxlan1
    vxlan vlan 110 multicast group 232.0.0.109
    vxlan vlan 111 multicast group 232.0.0.110
    vxlan vlan 210 multicast group 232.0.0.209
+   vxlan vlan 252 multicast group 232.0.0.251
    vxlan vlan 257 multicast group 232.0.1.0
    vxlan vlan 4092 multicast group 232.0.15.251
+   vxlan vlan 4094 multicast group 232.0.15.253
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_130_131 multicast group 232.0.32.31
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231 multicast group 232.0.32.32
    vxlan vrf TEN_D_L3_MULTICAST_ENABLED_140_DISABLED_141 multicast group 232.0.64.40
@@ -866,6 +881,12 @@ router bgp 65101
       redistribute learned
       vlan 7
    !
+   vlan-aware-bundle MULTICAST_DISABLED_251
+      rd 192.168.255.4:10251
+      route-target both 10251:10251
+      redistribute learned
+      vlan 251
+   !
    vlan-aware-bundle MULTICAST_DISABLED_256
       rd 192.168.255.4:10256
       route-target both 10256:10256
@@ -920,6 +941,13 @@ router bgp 65101
       redistribute learned
       vlan 210-211
    !
+   vlan-aware-bundle MULTICAST_ENABLED_252
+      rd 192.168.255.4:10252
+      route-target both 10252:10252
+      redistribute igmp
+      redistribute learned
+      vlan 252
+   !
    vlan-aware-bundle MULTICAST_ENABLED_257
       rd 192.168.255.4:10257
       route-target both 10257:10257
@@ -933,6 +961,13 @@ router bgp 65101
       redistribute igmp
       redistribute learned
       vlan 4092
+   !
+   vlan-aware-bundle MULTICAST_ENABLED_4094
+      rd 192.168.255.4:14094
+      route-target both 14094:14094
+      redistribute igmp
+      redistribute learned
+      vlan 4094
    !
    vlan-aware-bundle TEN_C_L3_MULTICAST_DISABLED_330_331
       rd 192.168.255.4:33
