--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
@@ -525,6 +525,32 @@ router_bgp:
       - 10150:10150
     redistribute_routes:
     - learned
+  - id: 251
+    tenant: Tenant_F
+    rd: 192.168.255.8:10251
+    route_targets:
+      both:
+      - 10251:10251
+    redistribute_routes:
+    - learned
+  - id: 252
+    tenant: Tenant_F
+    rd: 192.168.255.8:10252
+    route_targets:
+      both:
+      - 10252:10252
+    redistribute_routes:
+    - learned
+    - igmp
+  - id: 4094
+    tenant: Tenant_F
+    rd: 192.168.255.8:14094
+    route_targets:
+      both:
+      - 14094:14094
+    redistribute_routes:
+    - learned
+    - igmp
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -797,13 +823,18 @@ vlans:
 - id: 150
   name: L3_MULTICAST_ENABLED_150
   tenant: Tenant_E
+- id: 251
+  name: MULTICAST_DISABLED_251
+  tenant: Tenant_F
+- id: 252
+  name: MULTICAST_ENABLED_252
+  tenant: Tenant_F
+- id: 4094
+  name: MULTICAST_ENABLED_4094
+  tenant: Tenant_F
 ip_igmp_snooping:
   globally_enabled: true
   vlans:
-  - id: 256
-    querier:
-      enabled: true
-      address: 192.168.255.8
   - id: 230
     querier:
       enabled: true
@@ -1088,6 +1119,12 @@ vxlan_interface:
         vni: 10250
       - id: 150
         vni: 10150
+      - id: 251
+        vni: 10251
+      - id: 252
+        vni: 10252
+      - id: 4094
+        vni: 14094
       vrfs:
       - name: MULTICAST_DISABLED_310_311
         vni: 13
