--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
@@ -545,6 +545,35 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: '150'
+  - name: MULTICAST_DISABLED_251
+    tenant: Tenant_F
+    rd: 192.168.255.3:10251
+    route_targets:
+      both:
+      - 10251:10251
+    redistribute_routes:
+    - learned
+    vlan: '251'
+  - name: MULTICAST_ENABLED_252
+    tenant: Tenant_F
+    rd: 192.168.255.3:10252
+    route_targets:
+      both:
+      - 10252:10252
+    redistribute_routes:
+    - learned
+    - igmp
+    vlan: '252'
+  - name: MULTICAST_ENABLED_4094
+    tenant: Tenant_F
+    rd: 192.168.255.3:14094
+    route_targets:
+      both:
+      - 14094:14094
+    redistribute_routes:
+    - learned
+    - igmp
+    vlan: '4094'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -666,8 +695,8 @@ vlans:
   trunk_groups:
   - LEAF_PEER_L3
 - id: 4094
-  tenant: system
-  name: MLAG_PEER
+  tenant: Tenant_F
+  name: MULTICAST_ENABLED_4094
   trunk_groups:
   - MLAG
 - id: 310
@@ -841,6 +870,12 @@ vlans:
   trunk_groups:
   - LEAF_PEER_L3
   tenant: Tenant_E
+- id: 251
+  name: MULTICAST_DISABLED_251
+  tenant: Tenant_F
+- id: 252
+  name: MULTICAST_ENABLED_252
+  tenant: Tenant_F
 vlan_interfaces:
 - name: Vlan4093
   description: MLAG_PEER_L3_PEERING
@@ -1231,7 +1266,7 @@ port_channel_interfaces:
   type: switched
   shutdown: false
   mode: trunk
-  vlans: 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250,256-257,260,310-311,330-331,550,4092
+  vlans: 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092,4094
   mlag: 6
 ethernet_interfaces:
 - name: Ethernet3
@@ -1417,10 +1452,6 @@ ip_igmp_snooping:
       enabled: true
       address: 192.168.255.3
     fast_leave: true
-  - id: 256
-    querier:
-      enabled: true
-      address: 192.168.255.3
   - id: 257
     querier:
       enabled: true
@@ -1461,6 +1492,16 @@ ip_igmp_snooping:
     querier:
       enabled: true
       address: 192.168.255.3
+  - id: 252
+    querier:
+      enabled: true
+      address: 192.168.255.3
+    fast_leave: true
+  - id: 4094
+    querier:
+      enabled: true
+      address: 192.168.255.3
+    fast_leave: true
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
 vxlan_interface:
   Vxlan1:
@@ -1545,6 +1586,14 @@ vxlan_interface:
         vni: 10250
       - id: 150
         vni: 10150
+      - id: 251
+        vni: 10251
+      - id: 252
+        vni: 10252
+        multicast_group: 232.0.0.251
+      - id: 4094
+        vni: 14094
+        multicast_group: 232.0.15.253
       vrfs:
       - name: MULTICAST_DISABLED_310_311
         vni: 13
