--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -758,6 +758,14 @@ interface Ethernet69
    switchport
    ip nat service-profile TEST-NAT-PROFILE
 !
+interface Ethernet70
+   description dot1x_aaa_unresponsive
+   no shutdown
+   switchport
+   dot1x aaa unresponsive phone action apply cached-results timeout 10 hours else traffic allow
+   dot1x aaa unresponsive action traffic allow vlan 10
+   dot1x mac based access-list
+!
 interface Management1
    description oob_management
    vrf MGMT
