--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/radius-server.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/radius-server.cfg
@@ -12,6 +12,8 @@ radius-server host 10.10.11.160 vrf mgt timeout 1 key 7 071B245F5A
 radius-server host 10.10.11.248 vrf mgt key 7 071B245F5A
 radius-server host 10.10.11.249 timeout 1 retransmit 1 key 7 071B245F5A
 radius-server host 10.10.11.158 timeout 1 retransmit 1 key 7 071B245F5A
+radius-server host 10.10.11.156 tls port 1700 timeout 1 retransmit 1
+radius-server host 10.10.11.155 vrf mgt tls ssl-profile SSL_PROFILE port 2083 timeout 1 retransmit 1
 !
 no enable password
 no aaa root
