--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
@@ -110,11 +110,11 @@ vlan 331
 vlan 550
    name L3_MULTICAST_ENABLED_550
 !
+vlan 4091
+   name MULTICAST_ENABLED_4091
+!
 vlan 4092
    name MULTICAST_ENABLED_4092
-!
-vlan 4094
-   name MULTICAST_ENABLED_4094
 !
 vrf instance MGMT
 !
@@ -122,7 +122,7 @@ interface Port-Channel1
    description EVPN_MULTICAST_L3LEAF1_Po6
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092,4094
+   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4091-4092
    switchport mode trunk
 !
 interface Ethernet1
