--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
@@ -35,12 +35,12 @@ ip igmp snooping vlan 252 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.3
 ip igmp snooping vlan 257 fast-leave
+ip igmp snooping vlan 4091 querier
+ip igmp snooping vlan 4091 querier address 192.168.255.3
+ip igmp snooping vlan 4091 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.3
 ip igmp snooping vlan 4092 fast-leave
-ip igmp snooping vlan 4094 querier
-ip igmp snooping vlan 4094 querier address 192.168.255.3
-ip igmp snooping vlan 4094 fast-leave
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -212,6 +212,9 @@ vlan 3059
    name MLAG_iBGP_TEN_E_L3_MULTICAST_EVPN_PEG_RP_NODES
    trunk group LEAF_PEER_L3
 !
+vlan 4091
+   name MULTICAST_ENABLED_4091
+!
 vlan 4092
    name MULTICAST_ENABLED_4092
 !
@@ -220,7 +223,7 @@ vlan 4093
    trunk group LEAF_PEER_L3
 !
 vlan 4094
-   name MULTICAST_ENABLED_4094
+   name MLAG_PEER
    trunk group MLAG
 !
 vrf instance MGMT
@@ -282,7 +285,7 @@ interface Port-Channel6
    description EVPN-MULTICAST-L2LEAF1A_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092,4094
+   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4091-4092
    switchport mode trunk
    mlag 6
 !
@@ -736,8 +739,8 @@ interface Vxlan1
    vxlan vlan 330 vni 10330
    vxlan vlan 331 vni 10331
    vxlan vlan 550 vni 10550
+   vxlan vlan 4091 vni 14091
    vxlan vlan 4092 vni 14092
-   vxlan vlan 4094 vni 14094
    vxlan vrf MULTICAST_DISABLED_5_6 vni 23
    vxlan vrf MULTICAST_DISABLED_310_311 vni 13
    vxlan vrf MULTICAST_ENABLED_1_2 vni 21
@@ -764,8 +767,8 @@ interface Vxlan1
    vxlan vlan 210 multicast group 232.0.0.209
    vxlan vlan 252 multicast group 232.0.0.251
    vxlan vlan 257 multicast group 232.0.1.0
+   vxlan vlan 4091 multicast group 232.0.15.250
    vxlan vlan 4092 multicast group 232.0.15.251
-   vxlan vlan 4094 multicast group 232.0.15.253
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_130_131 multicast group 232.0.32.31
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231 multicast group 232.0.32.32
    vxlan vrf TEN_D_L3_MULTICAST_ENABLED_140_DISABLED_141 multicast group 232.0.64.40
@@ -955,19 +958,19 @@ router bgp 65101
       redistribute learned
       vlan 257
    !
+   vlan-aware-bundle MULTICAST_ENABLED_4091
+      rd 192.168.255.3:14091
+      route-target both 14091:14091
+      redistribute igmp
+      redistribute learned
+      vlan 4091
+   !
    vlan-aware-bundle MULTICAST_ENABLED_4092
       rd 192.168.255.3:14092
       route-target both 14092:14092
       redistribute igmp
       redistribute learned
       vlan 4092
-   !
-   vlan-aware-bundle MULTICAST_ENABLED_4094
-      rd 192.168.255.3:14094
-      route-target both 14094:14094
-      redistribute igmp
-      redistribute learned
-      vlan 4094
    !
    vlan-aware-bundle TEN_C_L3_MULTICAST_DISABLED_330_331
       rd 192.168.255.3:33
