Feat: Add global tls SSL profile support

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/radius-server.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/radius-server.yml
@@ -47,5 +47,6 @@ radius_server:
       retransmit: 1
       tls:
         enabled: true
-        ssl_profile: SSL_PROFILE
+        ssl_profile: HOST_SSL_PROFILE
         port: 2083
+  tls_ssl_profile: GLOBAL_RADIUS_SSL_PROFILE
