fix varpv6 when ipv6_enable:true is given

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -41,6 +41,7 @@ all:
             node-type-l3-interfaces:
             ipv4-acls:
             platform_settings:
+            varpv6:
         OVERRIDE_UPLINK_TYPE:
           hosts:
             override_uplink_type-d:
