--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -63,11 +63,17 @@ ethernet_interfaces:
           src: 01:23:45:67:89:ab
         encapsulation:
           vxlan_strip: true
-          gre_strip: true
           gre:
-            destination: 1.1.1.1
-            source: 1.1.1.2
-            protocol: "0x0000"
+            - strip: true
+            - strip: true
+              destination: 1.1.1.1
+              source: 1.1.1.2
+              protocol: "0x0000"
+            - strip: true
+              protocol: "0x0000"
+            - strip: true
+              destination: 2.1.1.2
+              protocol: "0x0000"
       tool:
         mpls_pop_all: true
         encapsulation:
@@ -83,6 +89,7 @@ ethernet_interfaces:
           - group1
           - group2
           - group3
+        dot1q_remove_outer_vlan_tag: 1
         dzgre_preserve: true
     eos_cli: |
       comment
